--- a/10.2.0/angular/src/app/admission/edit-addmission/edit-addmission.component.html
+++ b/10.2.0/angular/src/app/admission/edit-addmission/edit-addmission.component.html
@@ -1,54 +1,108 @@
-<form class="form-horizontal" autocomplete="off" #editAdmissionForm="ngForm" (ngSubmit)="save()">
-    <abp-modal-header title="Edit Admission" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
-    <div class="modal-body">
-     <div class="row mt-3">
+<form class="form-horizontal d-flex flex-column" style="height: 90vh; display: flex; flex-direction: column;"
+    autocomplete="off" #editAdmissionForm="ngForm" (ngSubmit)="save()">
+
+    <abp-modal-header style="flex: 0 0 auto;" title="Edit Admission"
+        (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
+
+    <div class="modal-body flex-grow-1" style="overflow-y: auto; padding-right: 15px;">
+
+        <!-- Patient & Admission Type -->
+        <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
                 <label><b>Select Patient</b></label>
-                <p-select [options]="patients" optionLabel="fullName" placeholder="Select a patient"
-                    [optionValue]="'id'" [(ngModel)]="admission.patientId" name="patientId" class="w-100" required />
+                <p-select [options]="patients" optionLabel="fullName" [optionValue]="'id'"
+                    [(ngModel)]="admission.patientId" name="patientId" class="w-100" required></p-select>
             </div>
-             <div class="col-md-6 d-flex flex-column">
-                 <label>Admission Type</label>
+            <div class="col-md-6 d-flex flex-column">
+                <label>Admission Type</label>
                 <p-select [(ngModel)]="admission.admissionType" name="admissionType" [options]="admissionTypeOptions"
                     optionLabel="label" optionValue="value" placeholder="Select admission type" class="w-100"
-                    required />
-             </div>
+                    required></p-select>
+            </div>
         </div>
+
+        <!-- Doctor & Nurse -->
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Doctor</label>
                 <p-select [(ngModel)]="admission.doctorId" [optionValue]="'id'" name="doctorId" [options]="doctors"
-                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required />
+                    optionLabel="fullName" placeholder="Select doctor" class="w-100" required></p-select>
             </div>
+
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Nurse</label>
                 <p-select [(ngModel)]="admission.nurseId" [optionValue]="'id'" name="nurseId" [options]="nurses"
-                    optionLabel="fullName" placeholder="Select nurse" class="w-100" />
+                    optionLabel="fullName" placeholder="Select nurse" class="w-100"></p-select>
             </div>
         </div>
+
+        <!-- Room & Bed -->
         <div class="row mt-3">
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Room</label>
-                <p-select [(ngModel)]="admission.roomId" [optionValue]="'value'" [filter]="true" name="roomId"
-                    [options]="roomOptions" optionLabel="label" placeholder="Select room" class="w-100" required
-                    (onChange)="onRoomChange($event.value)" />
+                <p-select [(ngModel)]="admission.roomId" name="roomId" [filter]="true" [options]="roomOptions"
+                    optionValue="value" optionLabel="label" placeholder="Select room" class="w-100" required
+                    (onChange)="onRoomChange($event.value)"></p-select>
             </div>
+
             <div class="col-md-6 d-flex flex-column">
                 <label>Select Bed</label>
                 <p-select [(ngModel)]="admission.bedId" name="bedId" [options]="beds" [filter]="true"
-                    optionLabel="bedNumber" optionValue="id" placeholder="Select bed" class="w-100">
-                </p-select>
+                    optionLabel="bedNumber" optionValue="id" placeholder="Select bed" class="w-100"></p-select>
             </div>
         </div>
-         <div class="row mt-3">
+
+        <!-- Reason -->
+        <div class="row mt-3">
             <div class="col-md-12 d-flex flex-column">
                 <label>Reason</label>
-                <textarea pTextarea [(ngModel)]="admission.reasonForAdmit" name="reasonForVisit"
-                    placeholder="Reason for visit" rows="3" class="w-100" required>
+                <textarea pTextarea [(ngModel)]="admission.reasonForAdmit" name="reasonForAdmit"
+                    placeholder="Reason for admission" rows="3" class="w-100" required>
         </textarea>
             </div>
         </div>
+
+        <!-- Billing Mode -->
+        <div class="row mt-3">
+            <div class="col-md-6 d-flex flex-column">
+                <label>Billing Mode</label>
+                <p-select [(ngModel)]="admission.billingMode" name="billingMode" [options]="billingMethodOptions"
+                    optionLabel="label" optionValue="value" class="w-100" required></p-select>
+            </div>
+
+            <div class="col-md-6 d-flex flex-column" *ngIf="admission.billingMode != BillingMethod._0">
+                <label>Insurance</label>
+                <p-select [(ngModel)]="admission.insuranceId" [options]="insurances" optionLabel="insuranceName"
+                    optionValue="id" placeholder="Select Insurance" name="insuranceId" class="w-100"
+                    required></p-select>
+            </div>
+        </div>
+
+        <!-- Insurance Details -->
+        <div class="row mt-3" *ngIf="admission.billingMode != BillingMethod._0">
+            <div class="col-md-12 d-flex flex-column">
+                <label>Policy Number</label>
+                <input type="text" class="form-control mb-2" placeholder="Policy Number"
+                    [(ngModel)]="admission.policyNumber" name="policyNumber" required />
+            </div>
+        </div>
+
+        <div class="row mt-3" *ngIf="admission.billingMode != BillingMethod._0">
+            <div class="col-md-6 d-flex flex-column">
+                <label>Coverage Limit</label>
+                <input type="number" class="form-control mb-2" placeholder="Coverage Limit"
+                    [(ngModel)]="admission.coverageLimit" name="coverageLimit" required />
+            </div>
+
+            <div class="col-md-6 d-flex flex-column">
+                <label>Co-Pay %</label>
+                <input type="number" class="form-control" placeholder="Co-Pay %" [(ngModel)]="admission.coPayPercentage"
+                    name="coPayPercentage" />
+            </div>
+        </div>
+
     </div>
-    <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!editAdmissionForm.form.valid || saving"
-        (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
+
+    <abp-modal-footer style="flex: 0 0 auto;" [cancelDisabled]="saving"
+        [saveDisabled]="!editAdmissionForm.form.valid || saving" (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
 </form>
