--- a/10.2.0/angular/src/app/home/home.component.html
+++ b/10.2.0/angular/src/app/home/home.component.html
@@ -222,11 +222,11 @@
                                     style="width: 250px;"></p-chart>
 
                                 <!-- Center overlay -->
-                                <div class="position-absolute d-flex flex-column justify-content-center align-items-center"
+                                <!-- <div class="position-absolute d-flex flex-column justify-content-center align-items-center"
                                     style="top: 100px; left: 57px;">
                                     <h6 class="mb-1">Appointments</h6>
                                     <h3 class="fw-bold">{{ summaryData?.totalAppointments }}</h3>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
