--- a/10.2.0/angular/src/app/app.component.html
+++ b/10.2.0/angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <app-header></app-header>
     <sidebar></sidebar>
-    <div class="content-wrapper">
+     <div class="content-wrapper"> <!-- style="background-color: #dfdfdf;" -->
         <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
